# pico-projects-all-protocols

./: CMakeLists.txt  LICENCE  README.md
adc_photoresistor/: CMakeLists.txt  adc_photoresistor.c  logger_uart_blocking.c
button_led_irq/: CMakeLists.txt  button_led_irq.c  logger_uart_blocking.h
dc_motor_speed/: CMakeLists.txt  dc_motor_speed.c
i2c_oled_9_6_lm75a/: CMakeLists.txt  M2M_LM75A.cpp  M2M_LM75A.h  i2c_oled_9_6_lm75a.cpp
multicore_temt6000_doormagnet/: CMakeLists.txt  multicore_temt6000_doormagnet.c
pwm_rgb_irq/: CMakeLists.txt  pwm_rgb_irq.c
pwm_rgb_led/: CMakeLists.txt  pwm_rgb_led.c
simple-button/: CMakeLists.txt  simple-button.c  simple-button.h
simple-uart/: CMakeLists.txt  simple-uart.c
spi_lcd_0_96/: CMakeLists.txt  spi_lcd_0_96.c
spi_lcd_0_96/lib/Config/: DEV_Config.c  DEV_Config.h
stepper_motor/: CMakeLists.txt  stepper_motor.c
three_leds/: CMakeLists.txt  three_leds.c  three_leds.h
tilt_sensor_irq/: CMakeLists.txt  tilt_sensor_irq.c
timer_periodic_alarm/: CMakeLists.txt  timer_periodic_alarm.c  timer_periodic_alarm.h
uart_tx_rx_irq/: CMakeLists.txt  uart_tx_rx_irq.c
